k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: hello-world
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
